sumo/tests/traci/VariableRetrieval/InductionLoop/errors/UnsupportedVariable/testclient_out.traci
TraCITestClient output file. Date: Mon Apr 19 09:28:45 2010


-> Command sent: <SimulationStep>:
  TargetTime=48.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <GetVariable>:
  domID=160 varID=255 objID=dummy
.. Answered with error to command (160), [description: Get Induction Loop Variable: unsupported variable specified]

-> Command sent: <SimulationStep>:
  TargetTime=49.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
